force-app/main/default/objects/RM_Usernames__c/RM_Usernames__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RM Usernames</label>
</CustomObject>