force-app/main/default/objects/RM_Usernames__c/fields/RW_Ameyo_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>RW_Ameyo_Agent_ID__c</fullName>
    <label>Ameyo Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>