force-app/main/default/objects/RM_Usernames__c/fields/RW_Reporting_2_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Reporting_2_Email__c</fullName>
    <label>Reporting 2 Email</label>
    <type>Email</type>
</CustomField>