force-app/main/default/objects/RM_Usernames__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>User_Name__c</columns>
    <columns>RW_Email__c</columns>
    <columns>RW_Reporting_1_Email__c</columns>
    <columns>RW_Reporting_2_Email__c</columns>
    <columns>RW_Reporting_3_Email__c</columns>
    <columns>RW_Reporting_4_Email__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>