force-app/main/default/objects/RM_Usernames__c/listViews/RM_Username.listView-meta.xml
<ListView>
    <fullName>RM_Username</fullName>
    <columns>NAME</columns>
    <columns>User_Name__c</columns>
    <columns>RW_Email__c</columns>
    <columns>RW_Ameyo_Agent_ID__c</columns>
    <columns>RW_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>RM Username</label>
</ListView>